--- a/WinkelAppProject/src/view/KlantGegevens.form
+++ b/WinkelAppProject/src/view/KlantGegevens.form
@@ -18,7 +18,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,-56,0,0,5,-94"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,-56,0,0,5,-53"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
@@ -34,73 +34,86 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace pref="23" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <Component id="jLabel1" min="-2" pref="20" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
+              </Group>
+              <Group type="102" alignment="1" attributes="0">
+                  <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="103" alignment="1" groupAlignment="0" attributes="0">
+                      <Group type="103" alignment="0" groupAlignment="0" attributes="0">
                           <Group type="103" alignment="1" groupAlignment="0" attributes="0">
                               <Group type="103" alignment="1" groupAlignment="0" attributes="0">
                                   <Group type="103" alignment="1" groupAlignment="0" attributes="0">
                                       <Group type="103" alignment="1" groupAlignment="0" attributes="0">
-                                          <Group type="102" alignment="1" attributes="0">
-                                              <Component id="lPostcode" min="-2" max="-2" attributes="0"/>
-                                              <EmptySpace min="-2" pref="120" max="-2" attributes="0"/>
+                                          <Group type="103" alignment="1" groupAlignment="0" attributes="0">
+                                              <Group type="102" alignment="1" attributes="0">
+                                                  <Component id="lPostcode" min="-2" max="-2" attributes="0"/>
+                                                  <EmptySpace min="-2" pref="120" max="-2" attributes="0"/>
+                                              </Group>
+                                              <Component id="lWoonplaats" alignment="0" min="-2" max="-2" attributes="0"/>
                                           </Group>
-                                          <Component id="lWoonplaats" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      </Group>
-                                      <Group type="102" attributes="0">
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="lHuisnummer" min="-2" max="-2" attributes="0"/>
-                                              <Component id="lEmail" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Group type="102" attributes="0">
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="lHuisnummer" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="lEmail" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              </Group>
+                                              <EmptySpace max="-2" attributes="0"/>
                                           </Group>
-                                          <EmptySpace max="-2" attributes="0"/>
                                       </Group>
+                                      <Component id="lStraatnaam" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <Component id="lStraatnaam" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lAchternaam" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="lAchternaam" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="lTussenvoegsel" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="lTussenvoegsel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Component id="lNaam" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="73" pref="73" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
-                      <Group type="102" attributes="0">
-                          <Component id="lNaam" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="73" pref="73" max="-2" attributes="0"/>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="lGeboortedatum" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="135" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="tfNaam" pref="490" max="32767" attributes="0"/>
-                                  <Component id="tfTussenvoegsel" max="32767" attributes="0"/>
-                              </Group>
-                              <Component id="tfEmail" alignment="1" min="-2" pref="490" max="-2" attributes="0"/>
-                              <Component id="jbOpslaan" min="-2" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="tfGeboortedatum" min="-2" pref="490" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="lTussenvoegselWijzigen" min="-2" max="-2" attributes="0"/>
-                              <Component id="jbWachtwoordWijzigen" min="-2" max="-2" attributes="0"/>
-                              <Component id="lNaamWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="lAchternaamWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="lStraatnaamWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="lHuisnummerWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="lWoonplaatsWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="lPostcodeWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="lEmailWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="lGeboortedatumWijzigen" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="tfAchternaam" alignment="0" min="-2" pref="490" max="-2" attributes="0"/>
-                      <Component id="tfStraatnaam" alignment="0" min="-2" pref="490" max="-2" attributes="0"/>
-                      <Component id="tfHuisnummer" alignment="0" min="-2" pref="490" max="-2" attributes="0"/>
-                      <Component id="tfWoonplaats" alignment="0" min="-2" pref="490" max="-2" attributes="0"/>
-                      <Component id="tfPostcode" alignment="0" min="-2" pref="490" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="tfNaam" pref="490" max="32767" attributes="0"/>
+                                      <Component id="tfTussenvoegsel" max="32767" attributes="0"/>
+                                  </Group>
+                                  <Component id="tfEmail" alignment="1" min="-2" pref="490" max="-2" attributes="0"/>
+                                  <Component id="jbOpslaan" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="lTussenvoegselWijzigen" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jbWachtwoordWijzigen" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lNaamWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lAchternaamWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lStraatnaamWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lHuisnummerWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lWoonplaatsWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lPostcodeWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lEmailWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <Component id="tfAchternaam" alignment="0" min="-2" pref="490" max="-2" attributes="0"/>
+                          <Component id="tfStraatnaam" alignment="0" min="-2" pref="490" max="-2" attributes="0"/>
+                          <Component id="tfHuisnummer" alignment="0" min="-2" pref="490" max="-2" attributes="0"/>
+                          <Component id="tfWoonplaats" alignment="0" min="-2" pref="490" max="-2" attributes="0"/>
+                          <Component id="tfPostcode" alignment="0" min="-2" pref="490" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace min="-2" pref="596" max="-2" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                  <Component id="jLabel1" min="-2" pref="20" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -176,12 +189,20 @@
                           <Component id="lEmail" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="lGeboortedatumWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                          <Component id="tfGeboortedatum" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="lGeboortedatum" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jbWachtwoordWijzigen" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jbOpslaan" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="165" max="32767" attributes="0"/>
+                  <EmptySpace pref="162" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -368,6 +389,26 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbOpslaanActionPerformed"/>
           </Events>
         </Component>
+        <Component class="javax.swing.JLabel" name="lGeboortedatum">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Geboortedatum"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="tfGeboortedatum">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="lGeboortedatumWijzigen">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/pictures/icons/wijzigen.png"/>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lGeboortedatumWijzigenMousePressed"/>
+          </Events>
+        </Component>
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="jPanel3">
@@ -388,7 +429,7 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="1442" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="1483" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
